<resources>
    <string name="app_name">My Dicoding Story</string>
    <string name="title_activity_detail_story">Detail Story</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="errorMessageEmail">
        Email is not valid
    </string>
    <string name="errorMessageName">
        Name must be filled
    </string>
    <string name="errorMessageRegister">
        Email, name, or password is not valid
    </string>
    <string name="errorMessageLogin">
        Email or password is not match
    </string>
    <string name="errorMessagePassword">
        Password must more than 8 char
    </string>
    <string name="title_activity_create_story">Create Story</string>
    <string name="logout">Logout</string>
    <string name="create_new_story">Create New Story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_question">Doesn\'t have account?</string>
    <string name="loading">Loading</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="save_story">Save</string>
    <string name="errorMessagePermission">Error Permission</string>
    <string name="errorMessageFile">Please add picture first</string>
    <string name="youchoose">You choose</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>