<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.dicoding.mystory.customView.CustomEditNameText
        android:id="@+id/edt_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="16dp" />

    <com.dicoding.mystory.customView.CustomEditEmailText
        android:id="@+id/edt_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="16dp" />

    <com.dicoding.mystory.customView.CustomEditPasswordText
        android:id="@+id/edt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:enabled="false"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="8dp" />

</LinearLayout>
