<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.dicoding.mystory.customView.CustomEditEmailText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="16dp" />

    <com.dicoding.mystory.customView.CustomEditPasswordText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_question"
        android:layout_marginTop="16dp"
        android:textColor="#0000FF"
        android:clickable="true" />

</LinearLayout>
